--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # 标题
-VITE_APP_TITLE=峰羽管理系统
+VITE_APP_TITLE=蜂羽管理系统
 
 # 项目本地运行端口号
 VITE_PORT=8081
@@ -20,6 +20,6 @@ VITE_APP_DOCALERT_ENABLE=true
 VITE_APP_BAIDU_CODE = a1ff8825baa73c3a78eb96aa40325abc
 
 # 默认账户密码
-VITE_APP_DEFAULT_LOGIN_TENANT = 峰羽源码
-VITE_APP_DEFAULT_LOGIN_USERNAME = admin
-VITE_APP_DEFAULT_LOGIN_PASSWORD = admin123
+VITE_APP_DEFAULT_LOGIN_TENANT = 芋道源码
+VITE_APP_DEFAULT_LOGIN_USERNAME = root
+VITE_APP_DEFAULT_LOGIN_PASSWORD = 123456
