--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dayjs": "^1.11.10",
     "diagram-js": "^12.8.0",
     "driver.js": "^1.3.1",
-    "echarts": "^5.5.0",
+    "echarts": "^5.6.0",
     "echarts-wordcloud": "^2.1.0",
     "element-plus": "2.9.1",
     "fast-xml-parser": "^4.3.2",
@@ -74,6 +74,7 @@
     "vue-i18n": "9.10.2",
     "vue-router": "4.4.5",
     "vue-types": "^5.1.1",
+    "vue3-gauge": "^0.0.5",
     "vue3-signature": "^0.2.4",
     "vuedraggable": "^4.1.0",
     "web-storage-cache": "^1.1.1",
